--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "task2",
+  "name": "task1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build:scripts": "babel ./src --out-dir=./dist"
   },
   "keywords": [],
@@ -11,7 +12,11 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.5",
-    "@babel/preset-env": "^7.16.5"
+    "@babel/core": "^7.16.5"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.5",
+    "@babel/plugin-transform-arrow-functions": "^7.16.5",
+    "@babel/plugin-transform-template-literals": "^7.16.5"
   }
 }
