--- a/task2/package.json
+++ b/task2/package.json
@@ -4,13 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "build:styles": "sass ./src/styles/index.scss ./dist/styles.css",
-    "copy:html": "copy src\\index.html dist\\index.html",
-    "build:scripts": "babel ./src --out-dir=./dist",
-    "clean": "RD dist /s",
-    "build": "npm-run-all clean build:* copy:*"
+    "build:scripts": "babel ./src --out-dir=./dist"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +12,6 @@
   "devDependencies": {
     "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "npm-run-all": "^4.1.5"
-  },
-  "dependencies": {
-    "core-js": "^3.20.0"
+    "@babel/preset-env": "^7.16.5"
   }
 }
