--- a/task5/package.json
+++ b/task5/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build:scripts": "webpack --mode=production",
     "watch:scripts": "webpack --mode=development --devtool eval-source-maps -w"
   },
@@ -12,6 +13,6 @@
   "license": "ISC",
   "devDependencies": {
     "webpack": "^4.46.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^3.3.12"
   }
 }
