--- a/task5/package.json
+++ b/task5/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:scripts": "webpack -p",
-    "watch:scripts": "webpack -d --devtool eval-source-maps -w"
+    "build:scripts": "webpack ./src/index.js --mode=production",
+    "watch:scripts": "webpack ./src/index.js --mode=development --devtool eval-source-maps -w"
   },
   "keywords": [],
   "author": "",
