--- a/task10/package.json
+++ b/task10/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack -p",
-    "watch": "webpack -d --watch --devtools eval-source-maps -w"
+    "watch": "webpack -d --watch --devtool eval-source-maps"
   },
   "keywords": [],
   "author": "",
